commited of quiz regix

--- a/bmi code by Talha Jamil/index.html
+++ b/bmi code by Talha Jamil/index.html
@@ -39,7 +39,7 @@
     </div>
     <div class="row">
         <div class="col-2 col-s-4"></div>
-        <div class="col-2 col-s-4"><input onclick="computeBMI()" type="submit" id="calcBMI" class="btn" value="Calculate BMI"></div>
+        <div class="col-2 col-s-4"><input type="submit" id="calcBMI" class="btn" value="Calculate BMI"></div>
     </div>
     <hr>
     <div id="users" class="row">
